--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: ASPIRE
 Type: Package
-Title: What the Package Does (Title Case)
+Title: ASPIRE package - Appraisal of Ecological Restoration Project Success (in prep)
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Renaud Jaunatre
+Maintainer: Renaud Jaunatre <renaud.jaunatre@inrae.fr>
+Description: ASPIRE package - Appraisal of Ecological Restoration Project Success. Provides functions to calculate scores of success at different levels : variables, objectives and project, and functions to illustrates these scores with plots.
+License: GPL-2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
